# Stylus-Trace

./: Cargo.toml  README.md
crates/stylus-trace-core/: Cargo.toml
crates/stylus-trace-core/src/aggregator/: metrics.rs
crates/stylus-trace-core/src/commands/: capture.rs  diff.rs
crates/stylus-trace-core/src/diff/: output.rs
crates/stylus-trace-core/src/output/: viewer.rs
crates/stylus-trace-core/src/output/viewer/: index.html  viewer.css  viewer.js
crates/stylus-trace-core/src/parser/: schema.rs
crates/stylus-trace-core/tests/: diff_tests.rs  output_tests.rs
docs/: ci-cookbook.md  provider-notes.md  quickstart.md  template-validation.md
