[workspace]
resolver = "2"
members = [
  "bin/stylus-trace-studio",
  "crates/stylus-trace-core",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
authors = ["CreativesOnchain"]
license = "MIT"
description = "Performance profiling and flamegraph generation for Arbitrum Stylus transactions"
repository = "https://github.com/CreativesOnchain/Stylus-Trace"
homepage = "https://github.com/CreativesOnchain/Stylus-Trace"
keywords = ["arbitrum", "stylus", "profiling", "gas", "flamegraph"]
categories = ["development-tools::profiling", "wasm"]

[workspace.dependencies]
stylus-trace-core = { version = "0.1.12", path = "crates/stylus-trace-core" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
colored = "2.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
addr2line = "0.21"
object = { version = "0.32", features = ["wasm"] }
gimli = "0.28"
tempfile = "3.10"
pretty_assertions = "1.4"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
