[package]
name = "stylus-trace-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/stylus-trace-core"
keywords = { workspace = true }
categories = { workspace = true }

readme = "README.md"

# OR point to root README (works too)
# readme = "../../README.md"

[dependencies]
# keep whatever you already have, or use workspace deps like:
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
colored.workspace = true
toml.workspace = true
env_logger.workspace = true
log.workspace = true
chrono.workspace = true
addr2line.workspace = true
object.workspace = true
gimli.workspace = true
tempfile.workspace = true
base64.workspace = true
